# django_react

./: .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
appmain/: apps.py  urls.py  views.py
backend/: settings.py  settings_db.py  urls.py
core/: apps.py  routers.py
core/abstract/: models.py  serializers.py  viewsets.py
core/auth/: permissions.py  tests.py
core/auth/serializers/: register.py
core/auth/viewsets/: __init__.py  refresh.py  register.py
core/comment/: models.py  serializers.py  tests.py  viewsets.py
core/comment/migrations/: 0001_initial.py
core/comment/tests/: test_viewsets.py
core/fixtures/: comment.py  post.py  user.py
core/post/: models.py  serializers.py  tests.py  viewsets.py
core/post/migrations/: 0001_initial.py
core/post/tests/: test_viewsets.py
core/user/: apps.py  models.py  serializers.py  viewssets.py
core/user/migrations/: 0001_initial.py  0002_user_posts_liked.py  0003_user_avatar_user_bio_alter_user_created_and_more.py
django_react/: requirements.txt
django_react/django_react/: psw.py  settings.py  settings_db_debug.py  urls.py
django_react/frontend/: package-lock.json  package.json  urls.py
django_react/leads/: models.py  serializers.py  urls.py  views.py
django_react_proj/django_react_proj/: asgi.py  settings.py  urls.py  wsgi.py
django_react_proj/students/: models.py  serializers.py  views.py
django_react_proj/students-fe/: package-lock.json
social-media-app/: package.json
social-media-app/src/: App.js  index.js  utils.js
students-fe/: package.json
(+26 files in other folders)
