[tool.poetry]
name = "reckoning"
version = "0.1.0"
description = ""
authors = ["Ruslan Sayfullin <ruslansaifullin91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.5"
django-debug-toolbar = "^3.8.1"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.5"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
